--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,19 @@
 alembic==1.5.1
-apscheduler==3.9.1
 astroid==2.5.1
 Authlib==1.1.0
 Babel==2.9.1
-boto3==1.20.52
+beautifulsoup4==4.10.0
 eventlet==0.33.1
 Flask==2.2.2
 Flask-Cors==3.0.10
-Flask-Migrate==3.1.0
 Flask-Moment==1.0.2
 Flask-SQLAlchemy==2.5.1
 future==0.18.2
 https://github.com/benoitc/gunicorn/archive/ff58e0c6da83d5520916bc4cc109a529258d76e1.zip#egg=gunicorn==20.1.0
-joblib==1.0.1
-python-jose==3.3.0
 json5==0.9.5
+nltk==3.7
 psycopg2-binary==2.9.1
-pycryptodome==3.3.1
 python-dateutil==2.8.1
-python-jose-cryptodome==1.3.2
-pytz==2021.1
-qrcode==7.3.1
-requests==2.25.1
 six==1.15.0
 SQLAlchemy==1.4.3
 urllib3==1.26.9
