--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ psycopg2-binary==2.9.1
 pyspellchecker==0.7.1
 python-dateutil==2.8.1
 six==1.15.0
+sklearn
 SQLAlchemy==1.4.3
 urllib3==1.26.9
 Werkzeug==2.2.2
