--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pyspellchecker==0.7.1
 python-dateutil==2.8.1
 six==1.15.0
 sklearn
+scikit-learn==1.0.2
 SQLAlchemy==1.4.3
 urllib3==1.26.9
 Werkzeug==2.2.2
