--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,43 @@
-alembic==1.5.1
-astroid==2.5.1
-Authlib==1.1.0
-Babel==2.9.1
-beautifulsoup4==4.10.0
-eventlet==0.33.1
-Flask==2.2.2
-Flask-Cors==3.0.10
-Flask-Moment==1.0.2
-Flask-SQLAlchemy==2.5.1
-future==0.18.2
-https://github.com/benoitc/gunicorn/archive/ff58e0c6da83d5520916bc4cc109a529258d76e1.zip#egg=gunicorn==20.1.0
-json5==0.9.5
-nltk==3.7
-psycopg2-binary==2.9.1
-pyspellchecker==0.7.1
-python-dateutil==2.8.1
-six==1.15.0
-sklearn
-scikit-learn==1.0.2
-SQLAlchemy==1.4.3
-urllib3==1.26.9
-Werkzeug==2.2.2
-wrapt==1.11.1
+alembic==1.17.2
+astroid==4.0.2
+Authlib==1.6.5
+babel==2.17.0
+beautifulsoup4==4.14.2
+blinker==1.9.0
+cffi==2.0.0
+click==8.3.1
+cryptography==46.0.3
+dnspython==2.8.0
+eventlet==0.40.3
+Flask==3.1.2
+flask-cors==6.0.1
+Flask-Moment==1.0.6
+Flask-SQLAlchemy==3.1.1
+future==1.0.0
+greenlet==3.2.4
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.2
+json5==0.12.1
+Mako==1.3.10
+MarkupSafe==3.0.3
+nltk==3.9.2
+numpy==2.3.5
+packaging==25.0
+psycopg2-binary==2.9.11
+pycparser==2.23
+pyspellchecker==0.8.3
+python-dateutil==2.9.0.post0
+regex==2025.11.3
+scikit-learn==1.7.2
+scipy==1.16.3
+six==1.17.0
+soupsieve==2.8
+SQLAlchemy==2.0.44
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
+wrapt==2.0.1
