--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dnspython==2.8.0
 eventlet==0.40.3
 Flask==3.1.2
 flask-cors==6.0.1
+Flask-Migrate==4.1.0
 Flask-Moment==1.0.6
 Flask-SQLAlchemy==3.1.1
 future==1.0.0
