--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ psycopg2-binary==2.9.11
 pycparser==2.23
 pyspellchecker==0.8.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 regex==2025.11.3
 scikit-learn==1.7.2
 scipy==1.16.3
