add apifairy and marshmallow

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.17.2
+apifairy==1.5.1
+apispec==6.8.4
 astroid==4.0.2
 Authlib==1.6.5
 babel==2.17.0
@@ -11,6 +13,8 @@ dnspython==2.8.0
 eventlet==0.40.3
 Flask==3.1.2
 flask-cors==6.0.1
+Flask-HTTPAuth==4.8.0
+flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
 Flask-Moment==1.0.6
 Flask-SQLAlchemy==3.1.1
@@ -23,6 +27,8 @@ joblib==1.5.2
 json5==0.12.1
 Mako==1.3.10
 MarkupSafe==3.0.3
+marshmallow==4.1.0
+marshmallow-sqlalchemy==1.4.2
 nltk==3.9.2
 numpy==2.3.5
 packaging==25.0
@@ -41,5 +47,6 @@ threadpoolctl==3.6.0
 tqdm==4.67.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+webargs==8.7.1
 Werkzeug==3.1.3
 wrapt==2.0.1
