add test database url environment variable

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ ENV=dev
 # Full connection URL, e.g. postgres://user:pass@host:5432/db
 DATABASE_URL=
 
+# Use in-memory SQLite db for tests
+TEST_DATABASE_URL=sqlite:///:memory:
+
 # Used only when ENV!=prod
 DB_USER=postgres
 DB_PASS=postgres
