--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,4 +60,5 @@ jobs:
       env:
         TEST_DATABASE_URL: postgresql://test_user:test_password@localhost:5432/duck_duck_oh
       run: |
+        flask download_nltk
         pytest
