--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ faker==33.0.0
 flask-cors==6.0.1
 Flask-HTTPAuth==4.8.0
 flask-marshmallow==1.3.0
+Flask-Limiter==3.10.1
 Flask-Migrate==4.1.0
 Flask-Moment==1.0.6
 Flask-SQLAlchemy==3.1.1
