use environment variables for rate limits.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ DB_PASS=postgres
 DB_NAME=duck_duck_oh
 DB_BASE_URL=localhost:5432
 
+
+# Rate Limiting
+RATELIMIT_GUEST="10 per minute"
+RATELIMIT_AUTHENTICATED="20 per minute"
